# evgp-cart-project

./: .gitignore  CMakeLists.txt  can  setup.sh
admin/: install_clearpath_drivers.sh  install_required_packages.sh
run/: CMakeLists.txt
run/ServoTest/: CMakeLists.txt  main.cpp
run/VESCTest/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/CAN/: CANBus.h  CMakeLists.txt
src/CAN/src/: CANBus.cpp  CANBus.h  CMakeLists.txt
src/GUI/src/: CMakeLists.txt  SimpleGUI.cpp  SimpleGUI.h
src/VESC/src/: CANMessages.h  CANUtils.h  CMakeLists.txt  VESC.cpp  VESC.h
src/servos/src/: CMakeLists.txt  ClearPathHubManager.cpp  ClearPathHubManager.h
